--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -21,6 +21,9 @@ jobs:
       with:
         go-version: '1.22.4'
 
+    - name: mod
+      run: go mod download
+      
     - name: Build-web
       run: go build -v bin/web
 
